<?xml version="1.0" encoding="utf-8"?>


<resources>
    <!-- Activities. -->
    <string name="privacy_browser">Simplicity</string>
    <string name="privacy_browser_settings">Simplicity Settings</string>

    <!-- SimplicityActivity. -->
    <string name="download_started">Download started</string>
    <string name="privacy_mode">Privacy Mode</string>
    <string name="javascript_enabled">JavaScript enabled</string>
    <string name="javascript_disabled">JavaScript disabled</string>
    <string name="dom_storage_enabled">DOM Storage enabled</string>
    <string name="dom_storage_disabled">DOM Storage disabled</string>
    <string name="first_party_cookies_enabled">First-Party Cookies enabled</string>
    <string name="first_party_cookies_disabled">First-Party Cookies disabled</string>
    <string name="third_party_cookies_enabled">Third-Party Cookies enabled</string>
    <string name="third_party_cookies_disabled">Third-Party Cookies disabled</string>
    <string name="cookies_deleted">Cookies deleted</string>
    <string name="dom_storage_deleted">DOM Storage deleted</string>
    <string name="open_navigation">Open Navigation Drawer</string>
    <string name="close_navigation">Close Navigation Drawer</string>

    <!-- Custom App Bar. -->
    <string name="favorite_icon">Favorite Icon</string>

    <!-- Navigation Drawer. -->
    <string name="navigation_drawer">Navigation Drawer</string>
    <string name="navigation">Navigation</string>
    <string name="home">Home</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="downloads">Downloads</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="clear_and_exit">Clear and Exit</string>

    <!-- Options Menu. -->
    <string name="javascript">JavaScript</string>
    <string name="first_party_cookies">First-Party Cookies</string>
    <string name="third_party_cookies">Third-Party Cookies</string>
    <string name="dom_storage">DOM Storage</string>
    <string name="clear_cookies">Clear Cookies</string>
    <string name="clear_dom_storage">Clear DOM Storage</string>
    <string name="share">Share</string>
    <string name="add_to_home_screen">Add to Home Screen</string>

    <!-- Create Home Screen Shortcut Alert Dialog. -->
    <string name="shortcut_name">Shortcut name</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>

    <!-- Preferences. -->
    <string name="privacy_settings">Privacy Settings</string>
    <string name="javascript_preference">Enable JavaScript by default</string>
    <string name="javascript_preference_summary">JavaScript allows websites to run programs (scripts) on your device.</string>
    <string name="first_party_cookies_preference">Enable first-party cookies by default</string>
    <string name="first_party_cookies_preference_summary">Cookies allow websites to store information on your device.
        First-party cookies come from the server listed in the address bar.
        Devices with versions of Android older than Lollipop (version 5.0) will also enable third-party cookies with this setting.</string>
    <string name="third_party_cookies_preference">Enable third-party cookies by default</string>
    <string name="third_party_cookies_summary">Third-party cookies allow parts of websites that aren\'t the main website, like advertisements, to store information on your device.
        This setting requires Android Lollipop (version 5.0) or higher.  It has no effect if first-party cookies are disabled.</string>
    <string name="dom_storage_preference">Enable DOM storage by default</string>
    <string name="dom_storage_preference_summary">Document Object Management storage, also called web storage, is an enhanced form of cookies
        that allows websites to store larger and more complex types of information, like pictures, on your device.</string>
    <string name="general_settings">General Settings</string>
    <string name="homepage_preference">Homepage</string>

    <!-- About Dialog. -->
    <string name="about_privacy_browser">About Simplicity</string>
    <string name="dismiss">Dismiss</string>
</resources>
